Fix bug where I hotkey wasn't causing info div to appear in LCV/Memories

--- a/MemoryMosaic/Shared/LibraryContentViewer.razor
+++ b/MemoryMosaic/Shared/LibraryContentViewer.razor
@@ -295,6 +295,7 @@ else
 	{
 		downloadPrompt.Rerender = StateHasChanged;
 		Header.Rerender = Rerender;
+		info.Rerender = StateHasChanged;
 		Reset();
 	}
 
