--- a/MemoryMosaic/Pages/Memories.razor
+++ b/MemoryMosaic/Pages/Memories.razor
@@ -260,6 +260,7 @@
     {
         SelectedMonth = DateTime.Today.ToString("MMMM");
         SelectedDay = DateTime.Today.Day;
+		info.Rerender = StateHasChanged;
 		
         LoadMemories();
     }
