Organize all modal-like components into their own folder in Shared/

--- a/MemoryMosaic/Pages/Import.razor
+++ b/MemoryMosaic/Pages/Import.razor
@@ -1,5 +1,5 @@
 @page "/import"
-@using CS = MemoryMosaic.Shared.CollectionSelector;
+@using CS = MemoryMosaic.Shared.Modal.CollectionSelector;
 @using System.Text
 @using MemoryMosaic.DataStructures
 @inject IJSRuntime JSRuntime
