Update ProgressPopUp to now use ModalBackground. Reduce repetition

--- a/MemoryMosaic/Shared/Modal/ModalBackground.razor
+++ b/MemoryMosaic/Shared/Modal/ModalBackground.razor
@@ -2,7 +2,7 @@
 
 @if (Visibility.Visible)
 {
-	<div class="modalBackground" style="background: @Background">
+	<div class="modalBackground" style="background-color: @Background">
 		@ChildContent
 	</div>
 }
