--- a/MemoryMosaic/wwwroot/css/components/modal/ProgressPopUp.css
+++ b/MemoryMosaic/wwwroot/css/components/modal/ProgressPopUp.css
@@ -1,19 +1,4 @@
-﻿#popupBackground {
-    position: fixed;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    z-index: 999;
-    background: rgba(72, 71, 71, 0.41);
-}
-
-#popupBackground > #progressPopUp {
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    background-color: black;
+﻿#progressPopUp {
     border: 2px solid white;
     border-radius: 8px;
     display: flex;
@@ -24,7 +9,7 @@
     word-wrap: break-word;
 }
 
-#popupBackground > #progressPopUp > span {
+#progressPopUp > span {
     text-align: center;
     margin-left: 10px;
     margin-right: 10px;
