--- a/MemoryMosaic/Shared/CollectionCreator.razor
+++ b/MemoryMosaic/Shared/CollectionCreator.razor
@@ -25,8 +25,9 @@
 @code {
     [Parameter, EditorRequired]
     public List<Collection> Collections { get; set; } = null!;
-
-    public event EventHandler? CollectionCreated;
+    
+    [Parameter]
+    public Action? OnCollectionCreate { get; set; }
 
     private string newCollectionBtnTitle = "New Collection", errorIconTitle = "", newCollectionBtnIcon = "library_add";
     public string NewCollectionName { get; private set; } = "";
@@ -68,7 +69,7 @@
         }
 
         C.CreateCollection(NewCollectionName, folder);
-        CollectionCreated?.Invoke(this, EventArgs.Empty);
+        OnCollectionCreate?.Invoke();
         AcceptingInput = folder = false;
     }
 }
