--- a/MemoryMosaic/wwwroot/css/components/modal/CtrlGInput.css
+++ b/MemoryMosaic/wwwroot/css/components/modal/CtrlGInput.css
@@ -1,14 +1,5 @@
 ﻿/* Re-usable component for allowing user to choose the date taken they want LCV to start at. */
-#ctrlGBackground {
-    position: fixed;
-    width: 140%;
-    height: 100%;
-    background-color: rgba(211, 211, 211, 0.1);
-    margin-left: -80px;
-    z-index: 999999;
-}
-
-#ctrlGBackground > #ctrlGInput {
+#ctrlGInput {
     background-color: black;
     padding: 12px 12px 6px;
     position: fixed;
@@ -21,21 +12,21 @@
     flex-direction: column;
 }
 
-#ctrlGBackground > #ctrlGInput > span {
+#ctrlGInput > span {
     margin-bottom: 4px;
 }
 
-#ctrlGBackground > #ctrlGInput > div {
+#ctrlGInput > div {
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 
-#ctrlGBackground > #ctrlGInput > div > input[type="date"] {
+#ctrlGInput > div > input[type="date"] {
     color: black;
     width: 108px;
 }
 
-#ctrlGBackground > #ctrlGInput > div > button {
+#ctrlGInput > div > button {
     margin-left: 6px;
 }
