--- a/MemoryMosaic/Shared/Modal/ShortcutsReference.razor
+++ b/MemoryMosaic/Shared/Modal/ShortcutsReference.razor
@@ -2,7 +2,7 @@
 @inherits ToggleableComponent
 <link href="css/components/modal/ShortcutsReference.css" rel="stylesheet"/>
 
-<div id="referenceBackground" style="@Visibility.Style">
+<ModalBackground Visibility="@Visibility">
     <div id="reference">
         <div id="header">
             <span>Keyboard Shortcuts</span>
@@ -127,9 +127,9 @@
             }
         </div>
     </div>
-</div>
+</ModalBackground>
 
-<KeyboardShortcuts CtrlSlash="@(() => { Visibility.Toggle(); StateHasChanged(); })"/>
+<KeyboardShortcuts CtrlSlash="@Toggle"/>
 
 @code {
     [Parameter]
