--- a/MemoryMosaic/wwwroot/css/components/modal/ShortcutsReference.css
+++ b/MemoryMosaic/wwwroot/css/components/modal/ShortcutsReference.css
@@ -1,14 +1,4 @@
-#referenceBackground {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    background: rgba(72, 71, 71, 0.41);
-    z-index: 9999999;
-}
-
-#referenceBackground > #reference {
+#reference {
     width: 400px;
     height: 400px;
     position: absolute;
@@ -19,7 +9,7 @@
     border: 2px solid white;
 }
 
-#referenceBackground > #reference > #header {
+#reference > #header {
     position: fixed;
     width: 100%;
     height: 65px;
@@ -28,11 +18,11 @@
     justify-content: center;
 }
 
-#referenceBackground > #reference > #header > span {
+#reference > #header > span {
     font-size: 20px;
 }
 
-#referenceBackground > #reference > #allShortcuts {
+#reference > #allShortcuts {
     position: absolute;
     left: 28px;
     top: 65px;
@@ -40,17 +30,17 @@
     flex-direction: column;
 }
 
-#referenceBackground > #reference > #allShortcuts > .shortcut {
+#reference > #allShortcuts > .shortcut {
     margin-bottom: 12px;
 }
 
-#referenceBackground > #reference > #allShortcuts > .shortcut > code {
+#reference > #allShortcuts > .shortcut > code {
     display: inline-block;
     text-align: center;
     background-color: rgba(211, 211, 211, 0.2);
     width: 50px;
 }
 
-#referenceBackground > #reference > #allShortcuts > .shortcut > span {
+#reference > #allShortcuts > .shortcut > span {
     margin-left: 10px;
 }
